--- a/css/style.css
+++ b/css/style.css
@@ -287,7 +287,7 @@ margin-top: 40px;
         margin: 30px;
         color: white;
         text-decoration: none;
-        background-color: green;
+        background-color: blue;
         padding: 20px;
         border-radius: 45px;
        transition: .3s;
