merubah jarak pada gallery

--- a/style.css
+++ b/style.css
@@ -404,6 +404,7 @@ margin-bottom: 40px;
    .gallery p {
     background-color: #F9F9F9;
     border-radius: 20px;
+    margin-top: 30px;
     padding: 20px;
    }
 
